--- a/front/target.html
+++ b/front/target.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>目標設定画面</title>
-        <link rel="stylesheet" type="text/css" href="../styles/styles.css">
+        <link rel="stylesheet" type="text/css" href="styles/styles.css">
     </head>
     <body>
         <h1>目標設定</h1>
