--- a/front/login.html
+++ b/front/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
         <title>ログイン画面</title>
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
@@ -7,14 +7,14 @@
     <body>
         <h1>ログイン</h1>
         <form id="loginForm">
-            <label for="username">ユーザー名:</label>
-            <input type="text" id="username" required>
+            <label for="name">ユーザー名:</label>
+            <input type="text" id="name" required>
             <label for="email">メールアドレス:</label>
             <input type="email" id="email" required>
             <label for="password">パスワード:</label>
             <input type="password" id="password" required>
             <button type="submit">ログイン</button>
         </form>
-        <script src="login.js"></script>
+        <script src="./script/login.js"></script>
     </body>
 </html>
