--- a/front/target.html
+++ b/front/target.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
         <title>目標設定画面</title>
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
@@ -16,6 +16,6 @@
             <h2>過去の目標</h2>
             <ul id="goals"></ul>
         </div>
-        <script src="target.js"></script>
+        <script src="./script/target.js"></script>
     </body>
 </html>
