目標達成変更テスト用

--- a/front/target.html
+++ b/front/target.html
@@ -17,5 +17,8 @@
             <ul id="goals"></ul>
         </div>
         <script src="./script/target.js"></script>
+        <script src="./script/target_change.js"></script>
+        
+
     </body>
 </html>
