リダイレクト

--- a/front/target.html
+++ b/front/target.html
@@ -3,6 +3,7 @@
     <head>
         <title>目標設定画面</title>
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
+        <script src="./script/auth.js"></script>
     </head>
     <body>
         <h1>目標設定</h1>
