--- a/front/index.html
+++ b/front/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <script src="./script/auth.js"></script>
 </head>
 <body>
 さんのページ
