--- a/front/target.html
+++ b/front/target.html
@@ -2,11 +2,19 @@
 <html lang="ja">
     <head>
         <title>目標設定画面</title>
-        <link rel="stylesheet" type="text/css" href="styles/styles.css">
+        <link rel="stylesheet" type="text/css" href="./styles/styles.css">
         <script src="./script/auth.js"></script>
     </head>
     <body>
         <h1>目標設定</h1>
+        <div id="level-section">
+            <h2 id="level-display">レベル: 1</h2>
+            <p id="xp-display">XP: 0 / 100</p>
+            <div id="xp-bar-container">
+                <div id="xp-bar"></div>
+            </div>
+        </div>
+
         <form id="goalForm">
             <label for="goalInput">目標を入力してください:</label>
             <input type="text" id="goalInput" required>
