--- a/front/index.html
+++ b/front/index.html
@@ -6,11 +6,9 @@
     <script src="./script/auth.js"></script>
 </head>
 <body>
-さんのページ
 <div class="navbar">
-    <button><a href="target.html">aaaa</a></button>
-    <button onclick="location.href='page2.html'">Page 2</button>
-    <button onclick="location.href='page3.html'">Page 3</button>
+    <button><a href="target.html">target</a></button>
+    <button><a href="room.html">room</a></button>
 </div>
 <div class="content">
     <div class="header">
