--- a/front/room.html
+++ b/front/room.html
@@ -6,7 +6,7 @@
   <title>Room Management</title>
   <script src="./script/room.js" defer></script>
   <script src="./script/auth.js"></script>
-  <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="./styles/styles.css">
 </head>
 <body>
 <h1>Room Management</h1>
@@ -22,6 +22,7 @@
 <!-- ルーム内のタスク一覧 -->
 <h2>Room Tasks</h2>
 <ul id="taskList">Select a room to see tasks.</ul>
+
 
 
 <!-- グループ作成フォーム -->
@@ -47,5 +48,6 @@
 </form>
 
 <div id="responseMessage"></div>
+<button><a href="index.html">戻る</a></button>
 </body>
 </html>
