--- a/front/target.html
+++ b/front/target.html
@@ -25,6 +25,7 @@
             <h2>過去の目標</h2>
             <ul id="goals"></ul>
         </div>
+        <button><a href="index.html">戻る</a></button>
         <script src="./script/target.js"></script>
     </body>
 </html>
