--- a/front/index.html
+++ b/front/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="./script/auth.js"></script>
+    <link rel="stylesheet" type="text/css" href="./styles/styles.css">
 </head>
 <body>
 <div class="navbar">
