--- a/front/index.html
+++ b/front/index.html
@@ -7,16 +7,19 @@
     <link rel="stylesheet" type="text/css" href="./styles/styles.css">
 </head>
 <body>
-<div class="navbar">
-    <button><a href="target.html">target</a></button>
-    <button><a href="room.html">room</a></button>
-</div>
-<div class="content">
-    <div class="header">
-        <div id="welcome-message"></div>
+<div class="contaaa">
+    <div class="navbar">
+        <button><a href="target.html">target</a></button>
+        <button><a href="room.html">room</a></button>
     </div>
-    <!-- ここに他のコンテンツを追加 -->
+    <div class="content">
+        <div class="header">
+            <div id="welcome-message"></div>
+        </div>
+        <!-- ここに他のコンテンツを追加 -->
+    </div>
 </div>
+
 <script>
     // ローカルストレージからユーザー名を取得して表示
     const username = localStorage.getItem('username') || 'テスト';
